--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,9 +1,9 @@
 blank_issues_enabled: false
 contact_links:
     - name: Documentation
-      url: https://appkit.coutts.io/packages/:package_name/docs
+      url: https://appkit.coutts.io/packages/lockable/docs
       about: View the documentation
       
     - name: Community
-      url: https://appkit.coutts.io/packages/:package_name/community
+      url: https://appkit.coutts.io/packages/lockable/community
       about: Ask the community for help
